--- a/vsbd/vsbd.csproj
+++ b/vsbd/vsbd.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\vsbd-core\vsbd-core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Attributes\" />
+    </ItemGroup>
+
 </Project>
