--- a/vsbd-app/package.json
+++ b/vsbd-app/package.json
@@ -10,11 +10,14 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
+    "@tailwindcss/vite": "^4.1.14",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@xyflow/react": "^12.8.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
